NCSPRIN-38 DAO fix